--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "echarts": "^5.3.3",
     "cesium": "1.87.0",
     "platform": "^1.3.6",
-    "vue": "^3.0.4"
+    "vue": "^3.0.4",
+    "@tensorflow/tfjs": "^4.17.0",
+    "@tensorflow-models/coco-ssd": "^2.2.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.0",
