--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "upload": "npm run build"
   },
   "dependencies": {
-    "echarts": "^5.3.3",
     "cesium": "1.87.0",
+    "echarts": "^5.3.3",
     "platform": "^1.3.6",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "vue": "^3.0.4"
   },
   "devDependencies": {
