--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "platform": "^1.3.6",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "vue": "^3.0.4"
+    "vue": "^3.0.4",
+    "@tensorflow/tfjs": "^4.17.0",
+    "@tensorflow-models/coco-ssd": "^2.2.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.0",
