--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
     "dev": "vite --mode development ",
     "build-dev": "vite build --mode development ",
     "build": "vite build --mode production",
-    "upload": "npm run build"
+    "upload": "npm run build",
+    "start": "node server.js"
   },
   "dependencies": {
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.17.0",
+    "@turf/turf": "^7.2.0",
     "cesium": "1.87.0",
+    "cors": "^2.8.5",
     "echarts": "^5.3.3",
+    "express": "^5.1.0",
+    "gcoord": "^1.0.7",
     "platform": "^1.3.6",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "vue": "^3.0.4",
-    "@tensorflow/tfjs": "^4.17.0",
-    "@tensorflow-models/coco-ssd": "^2.2.3"
+    "vue": "^3.0.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.0",
@@ -31,5 +36,18 @@
     "vite-babel-plugin": "0.0.2",
     "vite-plugin-cesium": "^1.2.10"
   },
-  "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808"
+  "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/herpapermoon/vue-vite-cesium-demo.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/herpapermoon/vue-vite-cesium-demo/issues"
+  },
+  "homepage": "https://github.com/herpapermoon/vue-vite-cesium-demo#readme",
+  "description": ""
 }
