--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "upload": "npm run build"
   },
   "dependencies": {
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.17.0",
     "cesium": "1.87.0",
-    "echarts": "^5.3.3",
+    "chart.js": "^4.4.9",
+    "echarts": "^5.6.0",
     "platform": "^1.3.6",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "vue": "^3.0.4",
-    "@tensorflow/tfjs": "^4.17.0",
-    "@tensorflow-models/coco-ssd": "^2.2.3"
+    "vue": "^3.0.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.0",
